# english_tests

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  core.py  index.html  network.py  pyproject.toml
.copilot/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
advanced_assessment/js/: script.js
classic_quiz/: index.html
classic_quiz/css/: style.css
classic_quiz/js/: script.js
css/: style.css
data/: advanced.json  beginner.json  exercises.json  full_exercises.json  intermediate.json  partial_exercises.json
dropdown_word_placement/: index.html
dropdown_word_placement/css/: style.css
full_word_placement/: index.html
full_word_placement/js/: script.js
js/: script.js
partial_word_placement/: index.html
partial_word_placement/js/: script.js
scripts/: README.md  generate_text.py
slider_word_placement/: index.html
slider_word_placement/css/: style.css
slider_word_placement/js/: script.js
src/english_tests/: __init__.py  app.py  core.py  network.py
src/english_tests/static/css/: style.css
src/english_tests/templates/: error.html  index.html
static/css/: style.css
templates/: error.html  index.html
